# customer_review_intention

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
agent_query_template/: v2.py
agents/: agent_flow.py
src/cri/: main.py
src/cri/agent_query_template/: v1.py
src/cri/agents/: agent_flow.py
src/cri/utils/: evaluation.py
utils/: __init__.py  arg_parser.py  evaluation.py
