[project]
name = "customer-review-intention"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "nltk>=3.9.1",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "sentence-transformers>=3.4.1",
    "tqdm>=4.67.1",
]


[tool.uv]
link-mode = "copy"
compile-bytecode = true
dev-dependencies = [
    "black>=25.1.0",
    "coverage>=7.6.1",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "vulture>=2.13",
]
